fix: fix overlap issue on settings

--- a/components/views/settings/modal/Modal.less
+++ b/components/views/settings/modal/Modal.less
@@ -112,7 +112,7 @@ p {
       width: 100%;
     }
     .menu-toggle {
-      margin-top: @light-spacing;
+      margin-top: @light-spacing * 3;
     }
   }
 
